testdata/golden/sema/valid/enum_string.sg
// String enum

enum Token: string = {
    lbrace = "{",
    rbrace = "}",
    lparen = "(",
    rparen = ")"
}

fn test() {
    let t: string = Token::lbrace;
}
