testdata/golden/sema/invalid/ownership/move_borrowed_value.sg
// Cannot move a value while it is borrowed.

fn main() {
    let s: string = "hi";
    let r: &string = &s;
    let os: own string = own s;
}
